# feedback-service

./: .env.example  LICENSE  docker-compose.yml  feedback-nginx.conf  feedback-supervisor.conf  pyproject.toml
config/: settings.py  urls.py
feedback/: models.py  urls.py  views.py
feedback/migrations/: 0001_initial.py  0002_peopleratingfeedback_created_at_and_more.py
templates/: feedback.html  feedback_success.html
