[project]
name = "feedback-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "psycopg-binary>=3.2.3",
    "psycopg>=3.2.3",
    "python-decouple>=3.8",
    "ruff>=0.8.4",
    "psycopg-pool>=3.2.4",
    "django-ipware>=7.0.1",
    "django-extensions>=3.2.3",
    "ipython>=8.31.0",
    "granian>=1.7.2",
]
